--- a/core/locale/de/LC_MESSAGES/django.po
+++ b/core/locale/de/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-12-21 13:15+0100\n"
+"POT-Creation-Date: 2024-12-26 20:39+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -81,6 +81,10 @@ msgid ""
 msgstr ""
 "Die Bildgröße muss sich innerhalb von %(min_width)sx%(min_height)s und "
 "%(max_width)sx%(max_height)s befinden"
+
+#: core/models.py:16
+msgid "Invited by"
+msgstr "Eingeladen von"
 
 #: core/templates/account/email_change.html:5
 msgid "Email Address"
